proper focus states for results, fixing alignment of playlist items

--- a/src/components/Playlist.scss
+++ b/src/components/Playlist.scss
@@ -23,5 +23,6 @@
 
   &__order {
     width: 4rem;
+    flex-shrink: 0;
   }
 }
